--- a/app/views/trains/index.html.haml
+++ b/app/views/trains/index.html.haml
@@ -10,6 +10,7 @@
       %th 学时
       %th 学分
       %th 录入人
+      %th 状态
       - if can? :update, Train
         %th
         %th
@@ -26,10 +27,11 @@
         %td= train.period
         %td= train.score
         %td= train.registrar.name
+        %td= train.status
         - if can? :update, Train
           %td= link_to '查看', train
-          %td= link_to '编辑', edit_train_path(train)
-          %td= link_to '删除', train, :confirm => '确定删除吗?', :method => :delete
+          %td= link_to_unless train.approved?, '编辑', edit_train_path(train)
+          %td= link_to_unless train.approved?, '删除', train, :confirm => '确定删除吗?', :method => :delete
 
 %br
 
