--- a/app/views/trains/show.html.haml
+++ b/app/views/trains/show.html.haml
@@ -1,5 +1,3 @@
-%p#notice= notice
-
 %p
   %b 培训类别:
   = @train.category.root.name
@@ -35,4 +33,4 @@
   .btn
     = link_to '编辑', edit_train_path(@train)
   .btn  
-    = link_to '返回', trains_path
+    = link_to '返回', trains_path(registrar_id: current_user.id)
