--- a/app/views/layouts/_menu.html.haml
+++ b/app/views/layouts/_menu.html.haml
@@ -12,7 +12,7 @@
   -if can? :manage, Report    
     .row
       %ul.nav.nav-tabs.nav-stacked
-        %l.nav-header.alert-info 统计分析
+        %li.nav-header.alert-info 统计分析
         %li= link_to '生成报表', new_report_path
         %li= link_to "学分排名"
         %li= link_to "学分明细"
