--- a/app/views/trains/index_for_trainee.html.haml
+++ b/app/views/trains/index_for_trainee.html.haml
@@ -1,4 +1,4 @@
-%table#trains.table.table-striped.table-bordered.datatable
+%table#trains_for_trainee.table.table-striped.table-bordered.datatable
   %thead
     %tr
       %th 项目名称
