--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,13 +1,11 @@
-%table#users.table.table-striped.table-bordered.datatable
+%table#tusers.table.table-striped.table-bordered
   %thead
     %tr
       %th 姓名
       %th 部门
       %th 职务
       %th 账号
-      %th
-      %th
-      %th
+      %th 操作
 
   %tbody    
     - @users.each do |user|
@@ -16,9 +14,10 @@
         %td= user.department.name
         %td= user.position.name
         %td= user.email
-        %td= link_to '查看', user_path(user)
-        %td= link_to '编辑', edit_user_url(user)
-        %td= link_to '删除', user_url(user), :confirm => '确定删除吗?', :method => :delete
+        %td
+          = link_to '查看', user_path(user)
+          = link_to '编辑', edit_user_url(user)
+          = link_to '删除', user_url(user), :confirm => '确定删除吗?', :method => :delete
         
         
 = link_to "用户注册", new_user_path, class: "btn"      
