--- a/app/views/trains/index_for_approve.html.haml
+++ b/app/views/trains/index_for_approve.html.haml
@@ -1,4 +1,4 @@
-%table#trains.table.table-striped.table-bordered.datatable
+%table#trains_for_approve.table.table-striped.table-bordered
   %thead
     %tr
       %th 项目名称
@@ -25,6 +25,9 @@
         %td= train.score
         %td= train.registrar.name
         %td
-          = link_to '加锁', approve_train_path(train, approved: true), class: 'btn', method: :put
-          = link_to '打回', approve_train_path(train, approved: false), class: 'btn', method: :put
-
+          = link_to approve_train_path(train, approved: true), class: 'btn btn-success', method: :put do
+            %i.icon-ok.icon-white
+            通过
+          = link_to approve_train_path(train, approved: false), class: 'btn btn-danger', method: :put do
+            %i.icon-remove.icon-white
+            打回
