--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -27,7 +27,7 @@
             = yield
       / ! end of .container
     / ! end of #main
-    %footer.navbar.navbar-fixed-bottom            
+    %footer.navbar.navbar-bottom            
       %nav.navbar-inner
         .container-fluid
           = render 'layouts/footer'
