--- a/app/views/layouts/_path.html.haml
+++ b/app/views/layouts/_path.html.haml
@@ -4,5 +4,4 @@
       %li
         = link_to(h(title), url) 
         %span.divider >
-    %li.active
-      = link_to @breadcrumbs.last.first
+    %li.active= @breadcrumbs.last.first
