--- a/app/views/reports/_form.html.haml
+++ b/app/views/reports/_form.html.haml
@@ -2,7 +2,7 @@
   = f.error_notification
 
   .form-inputs
-    = f.input :type, collection: %w[学分排名 学分明细 总体情况], required: true
+    = f.input :category, collection: %w[学分排名 学分明细 总体情况], required: true
     = f.input :start_date, as: :string, required: true
     = f.input :end_date, as: :string, required: true
 
