--- a/app/views/reports/index.html.haml
+++ b/app/views/reports/index.html.haml
@@ -5,16 +5,16 @@
       %th 结束日期
       %th 报表类别
       %th
-      %th
 
   %tbody      
     - @reports.each do |report|
       %tr
         %td= report.start_date
         %td= report.end_date
-        %td= report.title
-        %td= link_to '下载', report
-        %td= link_to '删除', report, :confirm => 'Are you sure?', :method => :delete
+        %td= report.category
+        %td
+          = link_to '下载', report_path(report, request.parameters.merge({format: :xls}))
+          = link_to '删除', report, :confirm => 'Are you sure?', :method => :delete
 
 %br
 
