--- a/app/views/reports/score_rank.xls.erb
+++ b/app/views/reports/score_rank.xls.erb
@@ -76,7 +76,7 @@
             <Data ss:Type="Number"><%= i + 1 %></Data>
           </Cell>
           <Cell ss:StyleID="s30">
-            <Data ss:Type="String"><%= u.department %></Data>
+            <Data ss:Type="String"><%= u.department.name %></Data>
           </Cell>
           <Cell ss:StyleID="s30">
             <Data ss:Type="String"><%= u.position %></Data>
