--- a/app/views/reports/score_rank.xls.erb
+++ b/app/views/reports/score_rank.xls.erb
@@ -1,135 +1,143 @@
 <?xml version="1.0"?>
 <?mso-application progid="Excel.Sheet"?>
 <Workbook xmlns="urn:schemas-microsoft-com:office:spreadsheet"
-          xmlns:o="urn:schemas-microsoft-com:office:office"
-          xmlns:x="urn:schemas-microsoft-com:office:excel"
-          xmlns:ss="urn:schemas-microsoft-com:office:spreadsheet"
-          xmlns:html="http://www.w3.org/TR/REC-html40">
-  <DocumentProperties xmlns="urn:schemas-microsoft-com:office:office">
-    <Author>User</Author>
-    <LastAuthor>User</LastAuthor>
-    <Created>2012-09-03T02:09:18Z</Created>
-    <Company>Microsoft</Company>
-    <Version>11.6568</Version>
-  </DocumentProperties>
-  <ExcelWorkbook xmlns="urn:schemas-microsoft-com:office:excel">
-    <WindowHeight>12945</WindowHeight>
-    <WindowWidth>16035</WindowWidth>
-    <WindowTopX>0</WindowTopX>
-    <WindowTopY>105</WindowTopY>
-    <ProtectStructure>False</ProtectStructure>
-    <ProtectWindows>False</ProtectWindows>
-  </ExcelWorkbook>
-  <Styles>
-    <Style ss:ID="Default" ss:Name="Normal">
-      <Alignment ss:Vertical="Center"/>
-      <Borders/>
-      <Font ss:FontName="宋体" x:CharSet="134" ss:Size="12"/>
-      <Interior/>
-      <NumberFormat/>
-      <Protection/>
-    </Style>
-    <Style ss:ID="s22">
-      <Alignment ss:Horizontal="Center" ss:Vertical="Center"/>
-      <Font ss:FontName="宋体" x:CharSet="134" ss:Size="18" ss:Bold="1"/>
-    </Style>
-    <Style ss:ID="s24">
-      <Alignment ss:Horizontal="Right" ss:Vertical="Center"/>
-    </Style>
-    <Style ss:ID="s25">
-      <Alignment ss:Horizontal="Center" ss:Vertical="Center"/>
-      <Font ss:FontName="宋体" x:CharSet="134" ss:Size="12" ss:Bold="1"/>
-    </Style>
-    <Style ss:ID="s26">
-      <Alignment ss:Horizontal="Center" ss:Vertical="Center"/>
-    </Style>
-    <Style ss:ID="s30">
-      <Alignment ss:Vertical="Center"/>
-    </Style>
-  </Styles>
-  <Worksheet ss:Name="Sheet1">
-    <Table ss:ExpandedColumnCount="6" ss:ExpandedRowCount="4" x:FullColumns="1"
-           x:FullRows="1" ss:DefaultColumnWidth="54" ss:DefaultRowHeight="14.25">
-      <Column ss:Index="2" ss:AutoFitWidth="0" ss:Width="133.5"/>
-      <Column ss:AutoFitWidth="0" ss:Width="90" ss:Span="1"/>
-      <Column ss:Index="5" ss:AutoFitWidth="0" ss:Width="99.75"/>
-      <Column ss:AutoFitWidth="0" ss:Width="62.25"/>
-      <Row ss:AutoFitHeight="0" ss:Height="44.25">
-        <Cell ss:MergeAcross="5" ss:StyleID="s22"><Data ss:Type="String">湖北银监局干部教育培训排名表</Data></Cell>
-      </Row>
-      <Row ss:AutoFitHeight="0" ss:Height="29.25">
-        <Cell ss:Index="2" ss:MergeAcross="4" ss:StyleID="s24">
-          <Data ss:Type="String"> 2012-01-01 ~ 2012-12-31 </Data>
-        </Cell>
-      </Row>
-      <Row ss:AutoFitHeight="0" ss:Height="27">
-        <Cell ss:StyleID="s25"><Data ss:Type="String">序号</Data></Cell>
-        <Cell ss:StyleID="s25"><Data ss:Type="String">部门</Data></Cell>
-        <Cell ss:StyleID="s25"><Data ss:Type="String">职务</Data></Cell>
-        <Cell ss:StyleID="s25"><Data ss:Type="String">姓名</Data></Cell>
-        <Cell ss:StyleID="s25"><Data ss:Type="String">学分</Data></Cell>
-        <Cell ss:StyleID="s25"><Data ss:Type="String">排名</Data></Cell>
-      </Row>
-      <% @users.each_with_index do |u, i| %>
-        <Row ss:AutoFitHeight="0" ss:Height="27">
-          <Cell ss:Index="2" ss:StyleID="s26">
-            <Data ss:Type="Number"><%= i + 1 %></Data>
-          </Cell>
-          <Cell ss:StyleID="s30">
-            <Data ss:Type="String"><%= u.department.name %></Data>
-          </Cell>
-          <Cell ss:StyleID="s30">
-            <Data ss:Type="String"><%= u.position %></Data>
-          </Cell>
-          <Cell ss:StyleID="s30">
-            <Data ss:Type="String"><%= u.name %></Data>
-          </Cell>
-          <Cell ss:StyleID="s30">
-            <Data ss:Type="Number"><%= u.total_score %></Data>
-          </Cell>
-          <Cell ss:StyleID="s30"/>
-        </Row>
-      <% end %>
-    </Table>
-    <WorksheetOptions xmlns="urn:schemas-microsoft-com:office:excel">
-      <PageSetup>
-        <Layout x:Orientation="Landscape"/>
-      </PageSetup>
-      <Unsynced/>
-      <Print>
-        <ValidPrinterInfo/>
-        <PaperSizeIndex>9</PaperSizeIndex>
-        <HorizontalResolution>-2</HorizontalResolution>
-        <VerticalResolution>0</VerticalResolution>
-      </Print>
-      <Selected/>
-      <Panes>
-        <Pane>
-          <Number>3</Number>
-          <ActiveRow>6</ActiveRow>
-          <ActiveCol>3</ActiveCol>
-        </Pane>
-      </Panes>
-      <ProtectObjects>False</ProtectObjects>
-      <ProtectScenarios>False</ProtectScenarios>
-    </WorksheetOptions>
-  </Worksheet>
-  <Worksheet ss:Name="Sheet2">
-    <Table ss:ExpandedColumnCount="0" ss:ExpandedRowCount="0" x:FullColumns="1"
-           x:FullRows="1" ss:DefaultColumnWidth="54" ss:DefaultRowHeight="14.25"/>
-    <WorksheetOptions xmlns="urn:schemas-microsoft-com:office:excel">
-      <Unsynced/>
-      <ProtectObjects>False</ProtectObjects>
-      <ProtectScenarios>False</ProtectScenarios>
-    </WorksheetOptions>
-  </Worksheet>
-  <Worksheet ss:Name="Sheet3">
-    <Table ss:ExpandedColumnCount="0" ss:ExpandedRowCount="0" x:FullColumns="1"
-           x:FullRows="1" ss:DefaultColumnWidth="54" ss:DefaultRowHeight="14.25"/>
-    <WorksheetOptions xmlns="urn:schemas-microsoft-com:office:excel">
-      <Unsynced/>
-      <ProtectObjects>False</ProtectObjects>
-      <ProtectScenarios>False</ProtectScenarios>
-    </WorksheetOptions>
-  </Worksheet>
+ xmlns:o="urn:schemas-microsoft-com:office:office"
+ xmlns:x="urn:schemas-microsoft-com:office:excel"
+ xmlns:ss="urn:schemas-microsoft-com:office:spreadsheet"
+ xmlns:html="http://www.w3.org/TR/REC-html40">
+ <DocumentProperties xmlns="urn:schemas-microsoft-com:office:office">
+  <Author>User</Author>
+  <LastAuthor>User</LastAuthor>
+  <Created>2012-09-03T02:09:18Z</Created>
+  <Company>Microsoft</Company>
+  <Version>11.6568</Version>
+ </DocumentProperties>
+ <ExcelWorkbook xmlns="urn:schemas-microsoft-com:office:excel">
+  <WindowHeight>12945</WindowHeight>
+  <WindowWidth>16035</WindowWidth>
+  <WindowTopX>0</WindowTopX>
+  <WindowTopY>105</WindowTopY>
+  <ProtectStructure>False</ProtectStructure>
+  <ProtectWindows>False</ProtectWindows>
+ </ExcelWorkbook>
+ <Styles>
+  <Style ss:ID="Default" ss:Name="Normal">
+   <Alignment ss:Vertical="Center"/>
+   <Borders/>
+   <Font ss:FontName="宋体" x:CharSet="134" ss:Size="12"/>
+   <Interior/>
+   <NumberFormat/>
+   <Protection/>
+  </Style>
+  <Style ss:ID="s22">
+   <Alignment ss:Horizontal="Center" ss:Vertical="Center"/>
+   <Font ss:FontName="宋体" x:CharSet="134" ss:Size="18" ss:Bold="1"/>
+  </Style>
+  <Style ss:ID="s24">
+   <Alignment ss:Horizontal="Right" ss:Vertical="Center"/>
+  </Style>
+  <Style ss:ID="s30">
+   <Alignment ss:Horizontal="Center" ss:Vertical="Center"/>
+   <Borders>
+    <Border ss:Position="Bottom" ss:LineStyle="Continuous" ss:Weight="1"/>
+    <Border ss:Position="Left" ss:LineStyle="Continuous" ss:Weight="1"/>
+    <Border ss:Position="Right" ss:LineStyle="Continuous" ss:Weight="1"/>
+    <Border ss:Position="Top" ss:LineStyle="Continuous" ss:Weight="1"/>
+   </Borders>
+   <Font ss:FontName="宋体" x:CharSet="134" ss:Size="12" ss:Bold="1"/>
+  </Style>
+  <Style ss:ID="s31">
+   <Borders>
+    <Border ss:Position="Bottom" ss:LineStyle="Continuous" ss:Weight="1"/>
+    <Border ss:Position="Left" ss:LineStyle="Continuous" ss:Weight="1"/>
+    <Border ss:Position="Right" ss:LineStyle="Continuous" ss:Weight="1"/>
+    <Border ss:Position="Top" ss:LineStyle="Continuous" ss:Weight="1"/>
+   </Borders>
+  </Style>
+  <Style ss:ID="s32">
+   <Alignment ss:Horizontal="Center" ss:Vertical="Center"/>
+   <Borders>
+    <Border ss:Position="Bottom" ss:LineStyle="Continuous" ss:Weight="1"/>
+    <Border ss:Position="Left" ss:LineStyle="Continuous" ss:Weight="1"/>
+    <Border ss:Position="Right" ss:LineStyle="Continuous" ss:Weight="1"/>
+    <Border ss:Position="Top" ss:LineStyle="Continuous" ss:Weight="1"/>
+   </Borders>
+  </Style>
+  <Style ss:ID="s33">
+   <Alignment ss:Vertical="Center"/>
+   <Borders>
+    <Border ss:Position="Bottom" ss:LineStyle="Continuous" ss:Weight="1"/>
+    <Border ss:Position="Left" ss:LineStyle="Continuous" ss:Weight="1"/>
+    <Border ss:Position="Right" ss:LineStyle="Continuous" ss:Weight="1"/>
+    <Border ss:Position="Top" ss:LineStyle="Continuous" ss:Weight="1"/>
+   </Borders>
+  </Style>
+ </Styles>
+ <Worksheet ss:Name="Sheet1">
+  <Table x:FullColumns="1"
+   x:FullRows="1" ss:DefaultColumnWidth="54" ss:DefaultRowHeight="14.25">
+   <Column ss:Index="2" ss:AutoFitWidth="0" ss:Width="133.5"/>
+   <Column ss:AutoFitWidth="0" ss:Width="90" ss:Span="1"/>
+   <Column ss:Index="5" ss:AutoFitWidth="0" ss:Width="99.75"/>
+   <Column ss:AutoFitWidth="0" ss:Width="62.25"/>
+   <Row ss:AutoFitHeight="0" ss:Height="44.25">
+    <Cell ss:MergeAcross="5" ss:StyleID="s22"><Data ss:Type="String">湖北银监局干部教育培训排名表</Data></Cell>
+   </Row>
+   <Row ss:AutoFitHeight="0" ss:Height="29.25">
+    <Cell ss:MergeAcross="5" ss:StyleID="s24"><Data ss:Type="String">2012-01-01 ~ 2012-12-31</Data></Cell>
+   </Row>
+   <Row ss:AutoFitHeight="0" ss:Height="27">
+    <Cell ss:StyleID="s30"><Data ss:Type="String">序号</Data></Cell>
+    <Cell ss:StyleID="s30"><Data ss:Type="String">部门</Data></Cell>
+    <Cell ss:StyleID="s30"><Data ss:Type="String">职务</Data></Cell>
+    <Cell ss:StyleID="s30"><Data ss:Type="String">姓名</Data></Cell>
+    <Cell ss:StyleID="s30"><Data ss:Type="String">学分</Data></Cell>
+    <Cell ss:StyleID="s30"><Data ss:Type="String">排名</Data></Cell>
+   </Row>
+   <% @report.rank_list.each_with_index do |r, i| %>
+    <Row ss:AutoFitHeight="0" ss:Height="27">
+      <Cell ss:StyleID="s31">
+        <Data ss:Type="Number"><%= i + 1 %></Data>
+      </Cell>
+      <Cell ss:StyleID="s32">
+        <Data ss:Type="String"><%= r[0] %></Data>
+      </Cell>
+      <Cell ss:StyleID="s33">
+        <Data ss:Type="String"><%= r[1] %></Data>
+      </Cell>
+      <Cell ss:StyleID="s33">
+        <Data ss:Type="String"><%= r[2] %></Data>
+      </Cell>
+      <Cell ss:StyleID="s33">
+        <Data ss:Type="Number"><%= r[3] %></Data>
+      </Cell>
+      <Cell ss:StyleID="s33">
+        <Data ss:Type="Number"><%= r[4] %></Data>
+      </Cell>
+    </Row>
+   <% end %>
+  </Table>
+  <WorksheetOptions xmlns="urn:schemas-microsoft-com:office:excel">
+   <PageSetup>
+    <Layout x:Orientation="Landscape"/>
+   </PageSetup>
+   <Unsynced/>
+   <Print>
+    <ValidPrinterInfo/>
+    <PaperSizeIndex>9</PaperSizeIndex>
+    <HorizontalResolution>-2</HorizontalResolution>
+    <VerticalResolution>0</VerticalResolution>
+   </Print>
+   <Selected/>
+   <Panes>
+    <Pane>
+     <Number>3</Number>
+     <ActiveRow>7</ActiveRow>
+     <ActiveCol>5</ActiveCol>
+    </Pane>
+   </Panes>
+   <ProtectObjects>False</ProtectObjects>
+   <ProtectScenarios>False</ProtectScenarios>
+  </WorksheetOptions>
+ </Worksheet>
 </Workbook>
