update readme info

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -5,7 +5,7 @@
     .span4    
       %span 建议使用Chrome、Fixfox等浏览器，或IE9.0以上版本。
       %br
-      %span 业务主管部门：人事处; 联系电话: 85565XXX      
+      %span 业务主管部门：人事处; 联系电话: 85565053      
     .span4
       .buttons.pull-right
         %a{href: "mailto:luowenbo@cbrc.gov.cn", class: "btn btn-large btn-info"} 
