if admin, can input all train info

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -6,3 +6,4 @@
   %ul 
     %li 本系统需要#{link_to("登录", new_user_session_path)}后方可使用，如未注册，请与人事处联系
     %li 系统注册后，用户名为用户内网邮箱账号(如XXX@cbrc.gov.cn)，密码为888888。用户登录系统后，请立即更改初始密码。
+    %li 登录系统后，各处室综合科长可以录入和管理本处室人员学分信息，其他人员只能查看自己的学分信息。
