--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -6,8 +6,9 @@
       %span 建议使用Chrome、Fixfox等浏览器，或IE9.0以上版本。
       %br
       %span 业务主管部门：人事处; 联系电话: 85565053      
-    .span4
-      .buttons.pull-right
-        %a{href: "mailto:luowenbo@cbrc.gov.cn", class: "btn btn-large btn-info"} 
+      %br
+      %span
+        %a{href: "mailto:luowenbo@cbrc.gov.cn", class: "label"} 
           %i.icon-envelope.icon-white
           联系管理员
+    .span4
